--- a/RsystemAngularApp/package.json
+++ b/RsystemAngularApp/package.json
@@ -18,16 +18,21 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
+    "angular-mocks": "^1.8.3",
+    "jest-editor-support": "*",
+    "karma-cli": "^2.0.0",
+    "ngx-pagination": "^6.0.3",
+    "phantomjs": "^2.1.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.3",
-    "jest-editor-support": "*"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.5",
     "@angular/cli": "^17.3.5",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "jasmine": "^5.2.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
